# WoBBot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  TokenHolderExample.kt  pom.xml
src/: arcanum.rs  main.rs  util.rs
src/main/java/wiresegal/wob/: Async.kt  Controls.kt  EntryStructure.kt  ExtraCalloutData.kt  MessageHandling.kt  Parsing.kt  Permissions.kt  Persistence.kt  TokenHolder.kt  Wiki.kt  WordsOfBrandon.kt
src/main/java/wiresegal/wob/arcanum/: EntryStructure.kt  Parsing.kt
src/main/java/wiresegal/wob/coppermind/: Wiki.kt
src/main/java/wiresegal/wob/lint/: LintEntry.kt
src/main/java/wiresegal/wob/misc/: Controls.kt
src/main/java/wiresegal/wob/misc/callouts/: ExtraCalloutData.kt
src/main/java/wiresegal/wob/misc/emotions/: Emotions.kt
src/main/java/wiresegal/wob/misc/util/: Async.kt  Embed.kt  Permissions.kt  Persistence.kt
src/main/java/wiresegal/wob/plugin/: PluginHandlerFramework.kt  PluginUtils.kt
